Add stores, change font sizes

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                 </div>
             </div>
         </div>
+        <p id="stores-title">No sale? Try these stores instead!</p>
+            <div id="stores">
+                <div id="store-fanatical">
+                    <a href="https://www.fanatical.com/en/" target="_blank"><img src="assets/images/fanatical.png" class="fanatical-img"></img></a>
+                </div>
+                <div id="store-humblebundle">
+                    <a href="https://www.humblebundle.com/" target="_blank"><img src="assets/images/humblebundle.png" class="humblebundle-img"></img></a>
+                </div>
+        </div>
         <div class="footer">
             <a target="_blank" href="https://steamcommunity.com/id/SylentIX"><p id="me">Created by Sylent#2711</p></a>
         </div>
