--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Steam Sale Tracker</title>
+        <title>Sylent's Steam Sale Tracker</title>
         <link rel="stylesheet" href="../style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
         <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico"/>
@@ -52,7 +52,7 @@
                 </div>
         </div>
         <div class="footer">
-            <a target="_blank" href="https://steamcommunity.com/id/SylentIX"><p id="me">Created by Sylent#2711</p></a>
+            <a target="_blank" href="https://steamcommunity.com/id/McSylent"><p id="me">Created by Sylent#2711</p></a>
         </div>
 </body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
