--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
         </div>
         <div class="footer">
-            <a target="_blank" href="https://steamcommunity.com/id/McSylent"><p id="me">Created by Sylent#2711</p></a>
+            <a target="_blank" href="https://steamcommunity.com/id/SylentIX"><p id="me">Created by Sylent#2711</p></a>
         </div>
 </body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
