--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" translate="no">
     <head>
         <title>Sylent's Steam Sale Tracker</title>
         <link rel="stylesheet" href="../style.css">
@@ -12,8 +12,9 @@
             <table class="countdown">
                 <tr>
                     <td colspan="4"></td>
-                    <p id="active"></p>
+                    <p id="title">When is the next Steam Sale?</p>
                     <p id="date"></p>
+                    <p id="active"></p>
                     <p id="date-hours"></p>
                     <p id="active-status"></p>
                 </tr>
@@ -30,27 +31,8 @@
                     <td id="seconds-title">Seconds</td>
                 </tr>
             </table>
-            <div id="details">
-                <div id="weeks-container">
-                    <p style="margin-top: 20px;"><span id="weeks-title-start">~ </span><span id="weeks">0</span><span id="weeks-title-end"> Weeks</span></p>
-                </div>
-                <div id="months-container">
-                    <p style="margin-top: 20px;"><span id="months-title-start">~ </span><span id="months">0</span><span id="months-title-end"> Months</span></p>
-                </div>
-                <div id="years-container">
-                    <p style="margin-top: 20px;"><span id="years-title-start">~ </span><span id="years">0</span><span id="years-title-end"> Years</span></p>
-                </div>
-            </div>
         </div>
-        <p id="stores-title">No sale? Try these stores instead!</p>
-            <div id="stores">
-                <div id="store-fanatical">
-                    <a href="https://www.fanatical.com/en/" target="_blank"><img src="assets/images/fanatical.png" class="fanatical-img"></img></a>
-                </div>
-                <div id="store-humblebundle">
-                    <a href="https://www.humblebundle.com/" target="_blank"><img src="assets/images/humblebundle.png" class="humblebundle-img"></img></a>
-                </div>
-        </div>
+        <a target="_blank" href="https://isthereanydeal.com/"><img id="no-sale" src="../assets/images/no_sale.jpg"></a>
         <div class="footer">
             <a target="_blank" href="https://steamcommunity.com/id/SylentIX"><p id="me">Created by Sylent#2711</p></a>
         </div>
