--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <a target="_blank" href="https://isthereanydeal.com/"><img id="no-sale" src="../assets/images/no_sale.jpg"></a>
         <div class="footer">
-            <a target="_blank" href="https://steamcommunity.com/id/SylentIX"><p id="me">Created by Sylent#2711</p></a>
+            <a target="_blank" href="https://steamcommunity.com/id/TheSylent"><p id="me">Created by Sylent#2711</p></a>
         </div>
 </body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
