--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" translate="no">
     <head>
         <title>Sylent's Steam Sale Tracker</title>
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-        <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico"/>
+        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico"/>
         <meta name="viewport" content="initial-scale=1">
     </head>
     <body>
@@ -38,7 +38,6 @@
         </div>
 </body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="../assets/scripts/display.js"></script>
-    <script type="text/javascript" src="../assets/scripts/load.js"></script>
-    <script type="text/javascript" src="../assets/scripts/countdown.js"></script>
+    <script type="text/javascript" src="assets/scripts/countdown.js"></script>
+    <script type="text/javascript" src="assets/scripts/load.js"></script>
 </html>
